🛠️Fix display bug on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,11 @@
 .App{
     height: 100vh; 
-    width: 56.25vh; 
-    max-width: 100vw;
     max-height: -webkit-fill-available;
     max-height: 100vh; 
-    margin: auto;
-    position: absolute;
-    top:0; bottom:0;
-    left:0; right:0;
+    max-width: 420px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
     overflow: hidden; 
 }
 
